--- a/Home/templates/Home/index.html
+++ b/Home/templates/Home/index.html
@@ -2,6 +2,8 @@
 {% block title %}JCE- learning{% endblock title %}
 {% block content %}
 {% load static %}
+
+
         <img
           src="{%static 'Home/icon/menu.png'%}"
           class="menu"
@@ -78,8 +80,8 @@
       </center>
       <div class="cbox">
         <div class="det">
-          <a href="#"
-            ><img src="{%static 'Home/images/computer.png'%}" />html</a
+          <a href="{%url 'shootergame'%}"
+            ><img src="{%static 'Home/images/computer.png'%}" />Shooter game</a
           >
         </div>
         <div class="det">
