--- a/Home/templates/Home/login.html
+++ b/Home/templates/Home/login.html
@@ -18,7 +18,6 @@
 
     <!-- It will redirect to the Home Page after submitting the form -->
     <script>
-    
       function signup() {
         location.href = "/signup/";
       }
@@ -58,7 +57,7 @@
         <div class="inp">
           <img src="{%static 'Home/icon/user.png'%}" /><input
             type="text"
-			name= 'username'
+            name="username"
             id="email"
             class="input-field"
             placeholder="Username "
@@ -71,7 +70,7 @@
           <img src="{%static 'Home/icon/password.png'%}" /><input
             type="password"
             id="password"
-			name = 'password'
+            name="password"
             class="input-field"
             placeholder="Password"
             style="width: 88%; border: none"
