--- a/Home/templates/Home/index.html
+++ b/Home/templates/Home/index.html
@@ -312,9 +312,9 @@
       <div class="rev-container">
         <div class="rev-card">
           <div class="identity">
-            <img src="{%static 'Home/images/sakshi.jpg'%}" />
-            <p>Mayur Jartarkar</p>
-            <h6>Professor</h6>
+            <img src="{%static 'Home/images/narayan.jpg'%}" />
+            <p>Narayan Sabale</p>
+            <h6>Student</h6>
             <div class="rating">
               <img src="{%static 'Home/icon/star.png'%}" /><img
                 src="{%static 'Home/icon/star.png'%}"
@@ -333,9 +333,9 @@
         </div>
         <div class="rev-card">
           <div class="identity">
-            <img src="{%static 'Home/images/sakshi.jpg'%}" />
-            <p>Mayur Jartarkar</p>
-            <h6>Professor</h6>
+            <img src="{%static 'Home/images/chandan.jpg'%}" />
+            <p>Chandan Kangralkar</p>
+            <h6>Student</h6>
             <div class="rating">
               <img src="{%static 'Home/icon/star.png'%}" /><img
                 src="{%static 'Home/icon/star.png'%}"
