--- a/Home/templates/Home/quiz.html
+++ b/Home/templates/Home/quiz.html
@@ -14,7 +14,7 @@
 	<header>
 		<div class="nav" id="nav">
 			<div id="learned-logo">
-			<a href="{%url 'home'%}"><img src="{%static 'Home/icon/logo.png'%}" style="width: 120px;"></a></div>
+			<a href="{%url 'home'%}"><img src="{%static 'Home/images/collegelogo.jpg'%}" style="width: 120px;"></a></div>
 			<div class="switch-tab" id="switch-tab" onclick="switchTAB()"><img src="{%static 'Home/icon/menu.png'%}"></div>
 			<ul id="list-switch">
 				<!-- <li><a href="jee.html"><img src="../images/courses/d1.png" class="icon">JEE</a></li> -->
