--- a/Home/templates/Home/base.html
+++ b/Home/templates/Home/base.html
@@ -34,7 +34,7 @@
     <header id="header">
       <nav>
         <div class="logo">
-          <img src="{%static 'Home/icon/logo.png'%}" alt="logo" />
+          <img src="{%static 'Home/images/collegelogo.jpg'%}" alt="logo" />
         </div>
         <ul>
           <li><a class="active" href="/">Home</a></li>
